--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Install dependencies and package
       run: |
         python -m pip install --upgrade pip
-        pip install .
+        # This forces a fresh install of your package from the repository's code
+        pip install --force-reinstall .
         pip install flake8 pytest
 
     - name: Lint with flake8
